--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.2",
+    "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.6",
     "tailwindcss": "3.3.3",
