--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^10.16.4",
     "handle-firebase-error": "^1.1.0",
     "next": "13.4.19",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
