--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.2",
+    "react-select": "^5.8.0",
     "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.6",
