--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.2",
     "react-select": "^5.8.0",
+    "react-simple-star-rating": "^5.1.7",
     "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.6",
