--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
+    "framer-motion": "^11.0.3",
     "handle-firebase-error": "^1.1.0",
     "next": "14.1.0",
     "react": "^18",
