--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.0.3",
     "handle-firebase-error": "^1.1.0",
     "next": "14.1.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
