--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
