--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.1.0",
+    "antd": "^5.14.0",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.3",
